CUcontent_DCs_twoMemories: fix memory title setup for small UI

--- a/ui/small/CUcontent_DCs_twoMemories.ui
+++ b/ui/small/CUcontent_DCs_twoMemories.ui
@@ -35,7 +35,7 @@
     <number>0</number>
    </property>
    <item row="0" column="0">
-    <widget class="QTabWidget" name="tabWidget">
+    <widget class="QTabWidget" name="DTCtables_tabWidget">
      <property name="currentIndex">
       <number>0</number>
      </property>
